# Watchdog-API

./: .gitignore  APIDocumentation.md  PostRequestExample.ipynb  README.md  ReadMe.md  UsageExample.ipynb  WatchdogAPISpecification.json  WatchdogAPISpecification.yaml  controlPanelConfig.py  deployLambdas.sh  dynamoScheme.md  getCamera.py  getToken.py  pyproject.toml  swagger.alpha.yaml  uploadClip.py  uploadFrame.py  watchdogapi_stack.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  UsageExample-checkpoint.ipynb
ControlPanelConfig/: lambda_function.py
DetectIntruder/: lambda_function.py
GetCamera/: lambda_function.py
GetToken/: lambda_function.py
UploadClip/: lambda_function.py
UploadVideo/: lambda_function.py
watchdog-api/: deploy.sh  package.yaml  swagger.yaml  template.yaml
watchdog-api/lambdas/: fetchLambdas.sh  lambda_function.py
watchdog-api/lambdas/APIGatewayPreflights/: index.js
watchdog-api/lambdas/AddToWhitelist/: lambda_function.py
watchdog-api/lambdas/AddVideoToArtefacts/: lambda_function.py
watchdog-api/lambdas/Analytics/: dashboard_analytics.py  helper_functions.py  lambda_function.py  owner_analytics.py
watchdog-api/lambdas/ControlPanelConfig/: lambda_function.py
watchdog-api/lambdas/DetectIntruder/: helper_functions.py  lambda_function.py
watchdog-api/lambdas/DynamoDelete/: lambda_function.py
watchdog-api/lambdas/DynamoFetcher/: lambda_function.py
watchdog-api/lambdas/DynamoPost/: lambda_function.py
watchdog-api/tests/: api_description.json  test_gets.py  test_identities.py
(+6 files in other folders)
