[tool.poetry]
name = "watchdog-api"
version = "0.1.0"
description = "watchdog api deployed through aws sam"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.x"
boto3 = "^1.14.58"
requests = "^2.24.0"
warrant = "^0.6.1"
pytest = "^6.0.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
